# woolworths-meal-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev-mobile-tunnel.cmd  dev-mobile.cmd  dev-mobile.ps1  pyproject.toml  render.yaml  run.ps1
.cursor/rules/: auto-commit-push.mdc  dev-servers.mdc  meal-eval.mdc
.github/workflows/: deploy-pages.yml
apps/browser-extension/: README.md  background.js  content-script.js  manifest.chromium.json  manifest.firefox.json  popup.css  popup.html  popup.js
apps/mobile/: app.config.js  app.json  metro.config.js  (+2 more)
docs/: AGENT_HANDOFF.md  nda-google-sheets-apps-script.js
profiles/: 2.json  ferrymead_gluten_free.json  gf_2_ppl_japanese.json  meal_eval_baseline.json  web_smoke_prefs.json
scripts/: meal_eval_run.py  web_smoke_run.py
tests/: conftest.py  test_access_gate.py  test_allergy.py  test_api_health.py  test_api_import_cookies.py  test_budget.py  test_budget_from_answers.py  test_budget_swaps.py  test_budget_trim.py  test_cart_merge.py  test_cart_validation.py  test_chef_plan_invalidation.py  test_chefs.py  test_client_match.py  test_cookie_import.py  test_detect_browser_logic.py  test_estimates.py  test_export.py  test_feedback_submit.py  test_gluten_labels.py  test_heal_coverage.py  test_ingredient_normalize.py  test_login_subprocess.py  test_mandatory_audit.py  test_meal_planner.py  test_meal_quality.py  test_models.py  test_nda_accept.py  test_openai_env.py  test_quantities.py  test_rank_products.py  test_review.py  test_search_helpers.py  test_shop_coverage.py  test_woolworths_smoke.py
(+95 files in other folders)
