[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "woolworths-meal-agent"
version = "0.1.0"
description = "Conversational meal-planning agent for Woolworths NZ with hybrid cart automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.0",
  "rich>=13.0",
  "httpx>=0.25",
  "woolies-nz-cli>=0.1.1",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.9",
  "browser-cookie3>=0.19.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]
e2e = [
  "playwright>=1.40",
]

[project.scripts]
meal-agent = "meal_agent_cli.main:main"
meal-agent-api = "meal_agent_api.main:run"

[tool.hatch.build.targets.wheel]
packages = [
  "packages/shared/src/shared",
  "packages/meal_planner/src/meal_planner",
  "packages/woolworths/src/woolworths_adapter",
  "packages/agent/src/agent",
  "apps/cli/src/meal_agent_cli",
  "apps/api/src/meal_agent_api",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [
  "packages/shared/src",
  "packages/meal_planner/src",
  "packages/woolworths/src",
  "packages/agent/src",
  "apps/cli/src",
  "apps/api/src",
]

[tool.ruff]
line-length = 100
target-version = "py311"
